@@ -19,6 +19,7 @@
 	all : fixed memory leak in compilation server and optimized caching in general
 	all : added UInt for all targets
 	all : added Array.indexOf and Array.lastIndexOf
+	all : support @:optional abstracts that automatically mark structure fields of that type as @:optional
 	all : added haxe.xml.Printer
 	all : added haxe.Int32 as abstract type
 	all : improved inline constructors by detecting more cases where it can be applied
